kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-app
  labels:
    name: retail-app
    Project: karatu-2025-capstone
